<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/diagonalLayout"
            android:layout_width="356dp"
            android:layout_height="424dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:elevation="5dp"
            app:diagonal_angle="@integer/diag_angle"
            app:diagonal_gravity="bottom|right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="2dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="@dimen/card_radius"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login"
                    app:layout_constraintVertical_bias="0.06">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/checkbox1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="112dp"
                            android:layout_height="23dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/email"
                            android:textColor="@android:color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.066"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.03" />

                        <EditText
                            android:id="@+id/fill_email"
                            android:layout_width="291dp"
                            android:layout_height="43dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:ems="10"
                            android:hint="@string/email_hint"
                            android:inputType="textEmailAddress"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.719"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.187" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="53dp"
                            android:layout_height="35dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/fill_email"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView"
                            app:layout_constraintVertical_bias="0.095"
                            app:srcCompat="@drawable/ic_email" />

                        <TextView
                            android:id="@+id/pass"
                            android:layout_width="112dp"
                            android:layout_height="23dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/password"
                            android:textColor="@android:color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.063"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView"
                            app:layout_constraintVertical_bias="0.121" />

                        <EditText
                            android:id="@+id/fill_pass"
                            android:layout_width="291dp"
                            android:layout_height="43dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="8dp"
                            android:ems="10"
                            android:hint="@string/pass_hint"
                            android:inputType="textPassword"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.836"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/pass"
                            app:layout_constraintVertical_bias="0.071" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="53dp"
                            android:layout_height="35dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/fill_pass"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/pass"
                            app:layout_constraintVertical_bias="0.069"
                            app:srcCompat="@drawable/ic_pass" />

                        <CheckBox
                            android:id="@+id/checkBox"
                            android:layout_width="166dp"
                            android:layout_height="64dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/remember_me"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.045"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView2"
                            app:layout_constraintVertical_bias="0.024" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>
            </FrameLayout>


        </com.github.florent37.diagonallayout.DiagonalLayout>

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/diagonalLayout2"
            android:layout_width="358dp"
            android:layout_height="209dp"
            android:layout_marginStart="8dp"

            android:layout_marginLeft="8dp"
            android:layout_marginTop="348dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:diagonal_angle="@integer/diag_angle"
            app:diagonal_gravity="top|left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login">


            <androidx.cardview.widget.CardView
                android:id="@+id/sign_card"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="@dimen/card_radius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.06">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/checkbox2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/dont_have_acc"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.36"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/gradient_normal"
                        android:onClick="signUp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/sign_up"
                        android:foreground="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </com.github.florent37.diagonallayout.DiagonalLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            app:backgroundTint="@color/fabbg"
            android:layout_marginTop="288dp"
            app:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/diagonalLayout"
            app:layout_constraintEnd_toEndOf="@+id/diagonalLayout"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toStartOf="@+id/diagonalLayout"
            app:layout_constraintTop_toTopOf="@+id/diagonalLayout"
            app:layout_constraintVertical_bias="0.625"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_arrow"
            android:clickable="true"
            android:focusable="true"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>